--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,7 +75,19 @@
         <h3>Navigation</h3>
         <li><a href="{{ site.baseurl }}/">Home</a></li>
         <li>
-          <a href="{{ site.baseurl }}/about">About </a>
+          <a href="{{ site.baseurl }}/gemini">Gemini - Aloe </a>
+        </li>
+        <li>
+          <a href="{{ site.baseurl }}/misty">Misty - Peace Lily </a>
+        </li>
+        <li>
+          <a href="{{ site.baseurl }}/luci">Luci - Pothos</a>
+        </li>
+        <li>
+          <a href="{{ site.baseurl }}/pat">Pat - Snake Plant</a>
+        </li>
+        <li>
+          <a href="{{ site.baseurl }}/herbert">The Herbert's - Herbs</a>
         </li>
       </ul>
     </nav>
