update pat and misty

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,7 +84,7 @@
           <a href="{{ site.baseurl }}/luci">Luci - Pothos</a>
         </li>
         <li>
-          <a href="{{ site.baseurl }}/pat">Pat - Snake Plant</a>
+          <a href="{{ site.baseurl }}/pat">Pat - Corn Plant</a>
         </li>
         <li>
           <a href="{{ site.baseurl }}/herbert">The Herbert's - Herbs</a>
