--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,6 +89,9 @@
         <li>
           <a href="{{ site.baseurl }}/herbert">The Herbert's - Herbs</a>
         </li>
+        <li>
+          <a href="{{ site.baseurl }}/duppy">Duppy - Ghost Plant</a>
+        </li>
       </ul>
     </nav>
 
