update navigation and details page with new plants

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,28 +71,43 @@
     </div>
     <div id="blackover-nav" class="blackover"></div>
     <nav id="menu">
-      <ul>
-        <h3>Navigation</h3>
-        <li><a href="{{ site.baseurl }}/">Home</a></li>
-        <li>
-          <a href="{{ site.baseurl }}/gemini">Gemini - Aloe </a>
-        </li>
-        <li>
-          <a href="{{ site.baseurl }}/misty">Misty - Peace Lily </a>
-        </li>
-        <li>
-          <a href="{{ site.baseurl }}/luci">Luci - Pothos</a>
-        </li>
-        <li>
-          <a href="{{ site.baseurl }}/pat">Pat - Corn Plant</a>
-        </li>
-        <li>
-          <a href="{{ site.baseurl }}/herbert">The Herbert's - Herbs</a>
-        </li>
-        <li>
-          <a href="{{ site.baseurl }}/duppy">Duppy - Ghost Plant</a>
-        </li>
-      </ul>
+        <ul>
+            <li><a href="{{ site.baseurl }}/">Home</a></li>
+            <li>
+                <a href="{{ site.baseurl }}/gemini">Gemini - Aloe Vera </a>
+            </li>
+            <li>
+                <a href="{{ site.baseurl }}/misty">Misty - Peace Lily </a>
+            </li>
+            <li>
+                <a href="{{ site.baseurl }}/luci">Luci - Golden Pothos</a>
+            </li>
+            <li>
+                <a href="{{ site.baseurl }}/herbert">The Herbert's - Herbs</a>
+            </li>
+            <li>
+                <a href="{{ site.baseurl }}/duppy">Duppy - Ghost Plant</a>
+            </li>
+            <li>
+                <a href="{{ site.baseurl }}/victoria">Victoria - Marble Queen</a>
+            </li>
+            <li>
+                <a href="{{ site.baseurl }}/naga">Naga - Snake Plant</a>
+            </li>
+            <li>
+                <a href="{{ site.baseurl }}/ducky">Ducky - Baby Rubber Plant</a>
+            </li>
+            <li>
+                <a href="{{ site.baseurl }}/malachi">Malachi - Jade Plant</a>
+            </li>
+            <li>
+                <a href="{{ site.baseurl }}/zoltan">Zoltan - Earth Star</a>
+            </li>
+            R.I.P.
+            <li>
+                <a href="{{ site.baseurl }}/pat">Pat - Corn Plant</a>
+            </li>
+        </ul>
     </nav>
 
     {% include search-lunr.html %}
