update nav and details links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,36 +74,66 @@
         <ul>
             <li><a href="{{ site.baseurl }}/">Home</a></li>
             <li>
-                <a href="{{ site.baseurl }}/gemini">Gemini - Aloe Vera </a>
+                <a href="{{ site.baseurl }}/bubbles">Bubbles - Monstera</a>
             </li>
             <li>
-                <a href="{{ site.baseurl }}/misty">Misty - Peace Lily </a>
+                <a href="{{ site.baseurl }}/cain">Cain - Dumb Cane Camouflage</a>
             </li>
             <li>
-                <a href="{{ site.baseurl }}/luci">Luci - Golden Pothos</a>
-            </li>
-            <li>
-                <a href="{{ site.baseurl }}/herbert">The Herbert's - Herbs</a>
-            </li>
-            <li>
-                <a href="{{ site.baseurl }}/duppy">Duppy - Ghost Plant</a>
-            </li>
-            <li>
-                <a href="{{ site.baseurl }}/victoria">Victoria - Marble Queen</a>
-            </li>
-            <li>
-                <a href="{{ site.baseurl }}/naga">Naga - Snake Plant</a>
+                <a href="{{ site.baseurl }}/charmeuse">Charmeuse - Satin Pothos</a>
             </li>
             <li>
                 <a href="{{ site.baseurl }}/ducky">Ducky - Baby Rubber Plant</a>
             </li>
             <li>
+                <a href="{{ site.baseurl }}/duppy">Duppy - Ghost Plant</a>
+            </li>
+            <li>
+                <a href="{{ site.baseurl }}/gemini">Gemini - Aloe Vera </a>
+            </li>
+            <li>
+                <a href="{{ site.baseurl }}/herbert">The Herbert's - Herbs</a>
+            </li>
+            <li>
+                <a href="{{ site.baseurl }}/laurel">Laurel - Calethea Medallion</a>
+            </li>
+            <li>
+                <a href="{{ site.baseurl }}/luci">Luci - Golden Pothos</a>
+            </li>
+            <li>
                 <a href="{{ site.baseurl }}/malachi">Malachi - Jade Plant</a>
+            </li>
+            <li>
+                <a href="{{ site.baseurl }}/misty">Misty - Peace Lily </a>
+            </li>
+            <li>
+                <a href="{{ site.baseurl }}/naga">Naga - Snake Plant</a>
+            </li>
+            <li>
+                <a href="{{ site.baseurl }}/serima">Serima - N'Joy Pothos</a>
+            </li>
+            <li>
+                <a href="{{ site.baseurl }}/sirius">Sirius - Calethea Beauty Star</a>
+            </li>
+            <li>
+                <a href="{{ site.baseurl }}/sprite">Sprite - Lemon Lime Prayer Plant</a>
+            </li>
+            <li>
+                <a href="{{ site.baseurl }}/stilletto">Stilletto - Calathea Pinstripe</a>
+            </li>
+            <li>
+                <a href="{{ site.baseurl }}/veronica">Veronica - Calathea Picturata Silver</a>
+            </li>
+            <li>
+                <a href="{{ site.baseurl }}/victoria">Victoria - Marble Queen</a>
+            </li>
+            <li>
+                <a href="{{ site.baseurl }}/vittus">Vittus - Calathea Vittata</a>
             </li>
             <li>
                 <a href="{{ site.baseurl }}/zoltan">Zoltan - Earth Star</a>
             </li>
-            R.I.P.
+            <p>R.I.P.</p>
             <li>
                 <a href="{{ site.baseurl }}/pat">Pat - Corn Plant</a>
             </li>
