update nav styles

--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -204,42 +204,55 @@ img:hover {
   }
 }
 #menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 420px;
-  background: #fff;
-  padding: 0;
-  margin: 0;
-  transform: translate(-100%, 0);
-  z-index: 1022;
-  &.active {
-    transform: translate(0%, 0);
-  }
-  ul {
-    float: left;
-    width: 100%;
-    padding: 80px 30px 80px 100px;
-    h3 {
-      margin-bottom: 30px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 420px;
+    background: #fff;
+    padding: 0;
+    margin: 0;
+    transform: translate(-100%, 0);
+    z-index: 1022;
+    overflow: auto;
+
+    &.active {
+        transform: translate(0%, 0);
     }
-    li {
-      list-style: none;
-      width: 100%;
-      a {
+
+    p {
+        margin-top: 40px;
+        margin-bottom: 0;
+    }
+
+    ul {
+        float: left;
         width: 100%;
-        display: inline-block;
-        padding: 2vh 0px 2vh 0px;
-        line-height: 20px;
-        text-decoration: none;
-        color: #8e9aa7;
-        font-weight: 400;
-        font-size: 18px;
-        position: relative;
-      }
+        padding: 80px 30px 80px 100px;
+
+        h3 {
+            margin-bottom: 30px;
+        }
+
+        li {
+            list-style: none;
+            width: 100%;
+            height: 40px;
+            margin: 10px 0;
+
+            a {
+                width: 100%;
+                display: inline-block;
+                padding: 2vh 0px 2vh 0px;
+                line-height: 20px;
+                text-decoration: none;
+                color: #8e9aa7;
+                font-weight: 400;
+                font-size: 18px;
+                position: relative;
+            }
+        }
     }
-  }
 }
 
 // blog grid
@@ -422,7 +435,7 @@ img:hover {
   margin-right: auto;
 }
 .posttitle {
-  font-size: 50px;
+  font-size: 48px;
   font-weight: 700;
   line-height: 1.2;
 }
