add statcounter tracking

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,73 +71,79 @@
     </div>
     <div id="blackover-nav" class="blackover"></div>
     <nav id="menu">
-        <ul>
-            <li><a href="{{ site.baseurl }}/">Home</a></li>
-            <li>
-                <a href="{{ site.baseurl }}/bubbles">Bubbles - Monstera</a>
-            </li>
-            <li>
-                <a href="{{ site.baseurl }}/cain">Cain - Dumb Cane Camouflage</a>
-            </li>
-            <li>
-                <a href="{{ site.baseurl }}/charmeuse">Charmeuse - Satin Pothos</a>
-            </li>
-            <li>
-                <a href="{{ site.baseurl }}/ducky">Ducky - Baby Rubber Plant</a>
-            </li>
-            <li>
-                <a href="{{ site.baseurl }}/duppy">Duppy - Ghost Plant</a>
-            </li>
-            <li>
-                <a href="{{ site.baseurl }}/gemini">Gemini - Aloe Vera </a>
-            </li>
-            <li>
-                <a href="{{ site.baseurl }}/herbert">The Herbert's - Herbs</a>
-            </li>
-            <li>
-                <a href="{{ site.baseurl }}/laurel">Laurel - Calethea Medallion</a>
-            </li>
-            <li>
-                <a href="{{ site.baseurl }}/luci">Luci - Golden Pothos</a>
-            </li>
-            <li>
-                <a href="{{ site.baseurl }}/malachi">Malachi - Jade Plant</a>
-            </li>
-            <li>
-                <a href="{{ site.baseurl }}/misty">Misty - Peace Lily </a>
-            </li>
-            <li>
-                <a href="{{ site.baseurl }}/naga">Naga - Snake Plant</a>
-            </li>
-            <li>
-                <a href="{{ site.baseurl }}/serima">Serima - N'Joy Pothos</a>
-            </li>
-            <li>
-                <a href="{{ site.baseurl }}/sirius">Sirius - Calethea Beauty Star</a>
-            </li>
-            <li>
-                <a href="{{ site.baseurl }}/sprite">Sprite - Lemon Lime Prayer Plant</a>
-            </li>
-            <li>
-                <a href="{{ site.baseurl }}/stilletto">Stilletto - Calathea Pinstripe</a>
-            </li>
-            <li>
-                <a href="{{ site.baseurl }}/veronica">Veronica - Calathea Picturata Silver</a>
-            </li>
-            <li>
-                <a href="{{ site.baseurl }}/victoria">Victoria - Marble Queen</a>
-            </li>
-            <li>
-                <a href="{{ site.baseurl }}/vittus">Vittus - Calathea Vittata</a>
-            </li>
-            <li>
-                <a href="{{ site.baseurl }}/zoltan">Zoltan - Earth Star</a>
-            </li>
-            <p>R.I.P.</p>
-            <li>
-                <a href="{{ site.baseurl }}/pat">Pat - Corn Plant</a>
-            </li>
-        </ul>
+      <ul>
+        <li><a href="{{ site.baseurl }}/">Home</a></li>
+        <li>
+          <a href="{{ site.baseurl }}/bubbles">Bubbles - Monstera</a>
+        </li>
+        <li>
+          <a href="{{ site.baseurl }}/cain">Cain - Dumb Cane Camouflage</a>
+        </li>
+        <li>
+          <a href="{{ site.baseurl }}/charmeuse">Charmeuse - Satin Pothos</a>
+        </li>
+        <li>
+          <a href="{{ site.baseurl }}/ducky">Ducky - Baby Rubber Plant</a>
+        </li>
+        <li>
+          <a href="{{ site.baseurl }}/duppy">Duppy - Ghost Plant</a>
+        </li>
+        <li>
+          <a href="{{ site.baseurl }}/gemini">Gemini - Aloe Vera </a>
+        </li>
+        <li>
+          <a href="{{ site.baseurl }}/herbert">The Herbert's - Herbs</a>
+        </li>
+        <li>
+          <a href="{{ site.baseurl }}/laurel">Laurel - Calethea Medallion</a>
+        </li>
+        <li>
+          <a href="{{ site.baseurl }}/luci">Luci - Golden Pothos</a>
+        </li>
+        <li>
+          <a href="{{ site.baseurl }}/malachi">Malachi - Jade Plant</a>
+        </li>
+        <li>
+          <a href="{{ site.baseurl }}/misty">Misty - Peace Lily </a>
+        </li>
+        <li>
+          <a href="{{ site.baseurl }}/naga">Naga - Snake Plant</a>
+        </li>
+        <li>
+          <a href="{{ site.baseurl }}/serima">Serima - N'Joy Pothos</a>
+        </li>
+        <li>
+          <a href="{{ site.baseurl }}/sirius">Sirius - Calethea Beauty Star</a>
+        </li>
+        <li>
+          <a href="{{ site.baseurl }}/sprite"
+            >Sprite - Lemon Lime Prayer Plant</a
+          >
+        </li>
+        <li>
+          <a href="{{ site.baseurl }}/stilletto"
+            >Stilletto - Calathea Pinstripe</a
+          >
+        </li>
+        <li>
+          <a href="{{ site.baseurl }}/veronica"
+            >Veronica - Calathea Picturata Silver</a
+          >
+        </li>
+        <li>
+          <a href="{{ site.baseurl }}/victoria">Victoria - Marble Queen</a>
+        </li>
+        <li>
+          <a href="{{ site.baseurl }}/vittus">Vittus - Calathea Vittata</a>
+        </li>
+        <li>
+          <a href="{{ site.baseurl }}/zoltan">Zoltan - Earth Star</a>
+        </li>
+        <p>R.I.P.</p>
+        <li>
+          <a href="{{ site.baseurl }}/pat">Pat - Corn Plant</a>
+        </li>
+      </ul>
     </nav>
 
     {% include search-lunr.html %}
@@ -157,16 +163,12 @@
         <!-- Site Tag
     ================================================== -->
         {% if page.url == '/' %}
-        <p class="sitetag">
-          {{ site.description }}
-        </p>
+        <p class="sitetag">{{ site.description }}</p>
         {% endif %}
 
         <!-- Content
     ================================================== -->
-        <div class="main-content">
-          {{ content }}
-        </div>
+        <div class="main-content">{{ content }}</div>
 
         {% if site.mailchimp-list %}
         <!-- Newsletter
@@ -250,5 +252,32 @@
       src="//{{site.disqus}}.disqus.com/count.js"
     ></script>
     {% endif %}
+    <!-- Default Statcounter code for Garden Time Blog
+https://cndragn.github.io/garden/ -->
+    <script type="text/javascript">
+      var sc_project = 12605068;
+      var sc_invisible = 1;
+      var sc_security = "130c9d16";
+    </script>
+    <script
+      type="text/javascript"
+      src="https://www.statcounter.com/counter/counter.js"
+      async
+    ></script>
+    <noscript
+      ><div class="statcounter">
+        <a
+          title="free hit
+  counter"
+          href="https://statcounter.com/"
+          target="_blank"
+          ><img
+            class="statcounter"
+            src="https://c.statcounter.com/12605068/0/130c9d16/1/"
+            alt="free hit counter"
+            referrerpolicy="no-referrer-when-downgrade"
+        /></a></div
+    ></noscript>
+    <!-- End of Statcounter Code -->
   </body>
 </html>
